--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 [mat-fab] {
   position: fixed;
-  bottom: 16px;
+  bottom: 92px;
   right: 16px;
 }
 
@@ -10,5 +10,22 @@ mat-list-item .content {
 }
 
 mat-list-item .content span {
+  flex: 1;
+}
+
+pre {
+  text-wrap: wrap;
+  flex: 1;
+  margin-inline: 16px;
+}
+
+.chat-container {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-inline: 16px;
+}
+
+.chat-container mat-form-field {
   flex: 1;
 }
