--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <app-nav>
+  @if (!ready()) {
+    <mat-progress-bar mode="determinate" [value]="progress() * 100"></mat-progress-bar>
+  }
+
   <mat-list>
     @for (todo of todos(); track todo) {
       <mat-list-item>
@@ -14,6 +18,20 @@
       </mat-list-item>
     }
   </mat-list>
+
+  <pre>{{ reply() }}</pre>
+
+  <div class="chat-container">
+    <mat-form-field>
+      <mat-label>Prompt</mat-label>
+      <input matInput placeholder="Prompt" #prompt>
+    </mat-form-field>
+
+    <button mat-raised-button (click)="runPrompt(prompt.value)" [disabled]="!ready()">
+      <mat-icon>send</mat-icon>
+      Ask
+    </button>
+  </div>
 
   <button mat-fab (click)="addTodo()">
     <mat-icon>add</mat-icon>
